[project]
name = "flux-garden-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bleach>=6.3.0",
    "fastapi[standard]>=0.120.2",
    "feedparser>=6.0.12",
    "pydantic>=2.12.3",
    "requests>=2.32.5",
    "sqlmodel>=0.0.27",
]
